Update production with latest changes

--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
                 <!-- Left Content -->
                 <div class="hero-text">
                     <h1>Payroll and compliance, built for H2A employers.</h1>
-                    <p>Simplify H-2A payroll, automate compliance, and empower your workforce with instant digital banking.</p>
+                    <p>STOP using paycards! Simplify H-2A payroll, automate compliance, and empower your workforce with instant digital banking.</p>
                     
                     <div class="rating-pill">
                         <span class="stars">★★★★★</span>
@@ -1286,7 +1286,7 @@
                 <div class="final-cta-content">
                     <div class="final-cta-badge">
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/></svg>
-                        Ready to Transform Your Payroll?
+                        Ready to Transform Your Guest Worker Experience?
                     </div>
                     <h2>Let's talk about how Yepzy can work for you</h2>
                     <p>Join 100+ agricultural employers who have simplified their H-2A payroll, eliminated compliance headaches, and empowered their workforce with modern financial tools.</p>
