--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
                 <!-- Left Content -->
                 <div class="hero-text">
                     <h1>Payroll and compliance, built for H2A employers.</h1>
-                    <p>STOP using paycards! Simplify H-2A payroll, automate compliance, and empower your workforce with instant digital banking.</p>
+                    <p>STOP using checks, cash, and paycards! Simplify H-2A payroll, automate compliance, and empower your workforce with instant digital banking.</p>
                     
                     <div class="rating-pill">
                         <span class="stars">★★★★★</span>
