Fix Node.js version for Vercel build, restore CTA buttons

--- a/main.html
+++ b/main.html
@@ -1304,8 +1304,9 @@
                     </div>
                     <h2>Let's talk about how Yepzy can work for you</h2>
                     <p>Join 100+ agricultural employers who have simplified their H-2A payroll, eliminated compliance headaches, and empowered their workforce with modern financial tools.</p>
-                    <div class="final-cta-buttons" style="justify-content: center;">
+                    <div class="final-cta-buttons">
                         <a href="#" class="btn btn-primary" onclick="openModal('demo'); return false;">Schedule a Demo</a>
+                        <a href="#" class="btn btn-outline" onclick="openModal('demo'); return false;">Contact Sales</a>
                     </div>
                 </div>
             </div>
