Disable HubSpot chat widget and add favicon

--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yepzy | Financial Services for Guest Workers</title>
+    <link rel="icon" href="https://yepzy.com/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://www.yepzy.com/hubfs/Yepzy%20Sept%202024/Images/yepzy-icon-gold.png">
+    <link rel="apple-touch-icon" href="https://www.yepzy.com/hubfs/Yepzy%20Sept%202024/Images/yepzy-icon-gold.png">
     <meta name="description" content="Modern payroll and banking solutions for H-2A/H-2B employers.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <!-- HubSpot Tracking Script -->
+    <!-- HubSpot Tracking Script (chat widget disabled) -->
+    <script>
+        window.hsConversationsSettings = { loadImmediately: false };
+    </script>
     <script id="hs-script-loader" async defer src="//js.hs-scripts.com/40107726.js"></script>
     <style>
         :root {
