Add Google Ads conversion tracking code (AW-17832063973) to index.html and main.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
       gtag('js', new Date());
       gtag('config', 'G-485MNGBKN2');
     </script>
+
+    <!-- Google Ads Conversion Tracking -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17832063973">
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'AW-17832063973');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yepzy | Financial Services for Guest Workers</title>
