Remove duplicate gtag code to prevent conflicts with GTM

--- a/index.html
+++ b/index.html
@@ -8,15 +8,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 <html lang="en">
 <head>
-    <!-- Google tag (gtag.js) - Analytics & Ads -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-485MNGBKN2"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-485MNGBKN2');
-      gtag('config', 'AW-17832063973');
-    </script>
+    <!-- Google Analytics and Ads tags now managed through GTM -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yepzy | Financial Services for Guest Workers</title>
